[project]
name = "asterr"
description = "Abstract Syntax Trees Evaluated Restricted Run (ASTERR) is a Python Script executor for ComfyUI. [w/Warning:ASTERR runs Python Code from a Web Interface! It is highly recommended to run this in a closed-off environment, as it could have potential security risks.]"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/WASasquatch/ASTERR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "was"
DisplayName = "ASTERR"
Icon = ""
